Remove gallery elements

--- a/site/collections/_pages/index.html
+++ b/site/collections/_pages/index.html
@@ -22,7 +22,7 @@ content_blocks:
     show_posts: true
   - _bookshop_name: contact-form
     form_title: Get in touch
-    form_description: Built in form to get in touch with Jess.
+    form_description: An easy way to drop me an email.
     form_submission_email: me@jesswhite.co.uk
     form_button_text: Send now
 ---
