--- a/site/collections/_pages/index.html
+++ b/site/collections/_pages/index.html
@@ -5,7 +5,7 @@ content_blocks:
     title: Hi, I am Jessica
     description_html: >-
       <p><strong>Technologist</strong> and <strong>Community Enthusiast</strong>. I work as a Principal Technical Architect, 
-        am an Microsoft MVP, I'm on the Board of the .NET Foundation, co-organise DDD East Midlands conference and more.</p>
+        am an Microsoft MVP, I'm on the Board of the .NET Foundation, co-organise DDD East Midlands conference and more.</p><p>
     image: /images/01.jpg
     image_alt: Jessica White's picture
     cta_button: Get in touch
@@ -22,7 +22,7 @@ content_blocks:
     show_posts: true
   - _bookshop_name: contact-form
     form_title: Get in touch
-    form_description: Built in form to get in touch with Jess.
+    form_description: An easy way to drop me an email.
     form_submission_email: me@jesswhite.co.uk
     form_button_text: Send now
 ---
