Update information on the website

--- a/site/collections/_pages/index.html
+++ b/site/collections/_pages/index.html
@@ -4,12 +4,12 @@ content_blocks:
   - _bookshop_name: hero
     title: Hi, I am Jessica
     description_html: >-
-      <p><strong>Technologist</strong> and <strong>Community Enthusiast</strong>. I work as a Principal Technical Architect, 
+      <p><strong>Technologist</strong> and <strong>Community Enthusiast</strong>. I work as a Senior Principal Technical Architect, 
         am an Microsoft MVP, I'm on the Board of the .NET Foundation, co-organise DDD East Midlands conference and more.</p><p>
     image: /images/01.jpg
     image_alt: Jessica White's picture
-    cta_button: Get in touch
-    cta_button_link: "#contact"
+    cta_button: LinkedIn
+    cta_button_link: "https://www.linkedin.com/in/jessica-w-67917883/"
   - _bookshop_name: testimonials-section
     title: LinkedIn Recommendations
     description_html:
