--- a/site/collections/_pages/index.html
+++ b/site/collections/_pages/index.html
@@ -7,7 +7,7 @@ content_blocks:
       <p><strong>Technologist</strong> and <strong>Community Enthusiast</strong>. I work as a Senior Principal Technical Architect, 
         am an Microsoft MVP, I'm on the Board of the .NET Foundation, co-organise DDD East Midlands conference and more.</p><p>
     image: /images/01.jpg
-    image_alt: Jessica White's picture
+    image_alt: Jessica Brentnall's picture
     cta_button: LinkedIn
     cta_button_link: "https://www.linkedin.com/in/jessica-w-67917883/"
   - _bookshop_name: testimonials-section
@@ -17,7 +17,7 @@ content_blocks:
   - _bookshop_name: blog-section
     title: Recent Posts
     description_html: >-
-      <p>Posts from Jessica White on tech, management and life.</p>
+      <p>Posts from Jessica Brentnall on tech, management and life.</p>
     link_url: /blog
     show_posts: true
 ---
